# libde265-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check_and_test.yaml
src/: decoder.rs  errors.rs  image.rs  lib.rs
tests/: decoder.rs
